Refine public marketing hero layout